--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Creeper315.github.io/for-lily",
   "name": "for-lily",
   "version": "0.1.0",
   "private": true,
@@ -18,14 +19,13 @@
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/Creeper315/for-lily.git",
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
